	* src/business/business-gnome/glade/invoice.glade:
	  - add the to_charge_amount frame and labels.
	* src/busines/business-core/file/gnc-invoice-xml-v2.c: Add support
	  for the to-charge amount.

	* src/business/business-gnome/dialog-invoice.c: fix an assertion
	  failure -- don't try to set the to_charge_amount value unless
	  we're in a VIEW/EDIT invoice.
	
2003-04-01  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-system/options-utilities.scm: Fix missing i18n
	markup on some option names.

2003-03-31  David Hampton  <hampton@employees.org>

	* src/engine/Account.c:
	* src/gnome/gnc-split-reg.c:
	* src/app-utils/gnc-ui-util.c: Push gui independent functions into
	the engine.

	* src/gnome/window-acct-tree.c:
	* src/gnome-utils/gnc-account-tree.c:
	* src/scm/main-window.scm: Collapse the account tree data
	declarations into a common table.  Change functions to be driven
	off this data table instead of explicitly coding each field.  Add
	new fields in the account tree window for present, cleared,
	reconciled, and future minimum balances.  #95628
	
	* src/gnome-utils/dialog-account.c: Update for changes to function
	parameters.

2003-03-31  Herbert Thoma  <herbie@hthoma.de>

	* src/engine/gnc-pricedb.c
	* src/engine/gnc-pricedb.h: new function
	gnc_pricedb_lookup_latest_any_currency, return any available
	prices for given commodity regardless of currency
	
	* src/app-utils/gnc-ui-util.c: do a "two stage" price lookup in
	gnc_ui_convert_balance_to_currency if no price for the commodity
	is found in the requested currency, then look for prices in any
	currency and for a exchange rate from the price currency to the
	requested currency

	* src/gnome/gnc-split-reg.c: do currency conversion and show the
	value in the status line of stock and mutual fund accounts

2003-03-31  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/test/test-employee.c:  fix the test
	  to reflect the change in Employee->Printable()
